quantities-macros/tests/ui/missing_unitvalue_impl.rs
use quantities_macros::quantity;

#[quantity(unit=RandomQuantityUnit)]
pub struct RandomQuantity;

enum RandomQuantityUnit {
    Base
}

fn main() {}